Обновил проект: добавил Keycloak и изменил сущности

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
 spring.application.name=internetmagazin
+
+server.port=8000
+keycloak.url=http://localhost:8081/auth
+keycloak.realm=nursultan-realm
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${keycloak.url}/realms/${keycloak.realm}
+keycloak.client=nursultan-user-service-client
+keycloak.client-secret=Vwzec7NLUOdj8YgWvDJ6kaygNaZeRNvG
+keycloak.username=nursultan ruzgaliyev
+keycloak.password=qwerty
+keycloak.grant-type=password
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/Magazin
+spring.datasource.username=postgres
+spring.datasource.password=Nursultan23@
+spring.jpa.hibernate.ddl-auto=update
+spring.h2.console.enabled=true
+
+
+
